package theory.behaviour.state;

public interface GateState {

    void cardValid();

    void cardInvalid();

    void personCrossedTheGate();

    void personCrossingTheGate();

}
